src/objects/Workflow_details__c/Workflow_details__c.object-meta.xml
<CustomObject>
    <label>eGreensheet</label>
    <nameField>
        <displayFormat>G-{00000}</displayFormat>
        <label>Workflow ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>eGreensheet</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>