src/objects/Workflow_details__c/fields/Airbus__c.field-meta.xml
<CustomField>
    <fullName>Airbus__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Airbus</label>
    <type>Checkbox</type>
</CustomField>