src/objects/Workflow_details__c/fields/Airbus_c__c.field-meta.xml
<CustomField>
    <fullName>Airbus_c__c</fullName>
    <formula>IF( Airbus__c , &apos;Airbus&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airbus</label>
    <type>Text</type>
</CustomField>