src/objects/Workflow_details__c/fields/Airlines_c__c.field-meta.xml
<CustomField>
    <fullName>Airlines_c__c</fullName>
    <formula>IF( Airlines__c , &apos;Airlines&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Airlines</label>
    <type>Text</type>
</CustomField>