src/objects/Workflow_details__c/fields/AM__c.field-meta.xml
<CustomField>
    <fullName>AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AM</label>
    <type>Checkbox</type>
</CustomField>