src/objects/Workflow_details__c/fields/Americas__c.field-meta.xml
<CustomField>
    <fullName>Americas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Americas</label>
    <type>Checkbox</type>
</CustomField>