src/objects/Workflow_details__c/fields/APAC__c.field-meta.xml
<CustomField>
    <fullName>APAC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>APAC</label>
    <type>Checkbox</type>
</CustomField>