src/objects/Workflow_details__c/fields/Approval_Level_in_Progress__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_in_Progress__c</fullName>
    <label>Approval Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 0</fullName>
            </value>
            <value>
                <fullName>Tier I</fullName>
            </value>
            <value>
                <fullName>Tier II</fullName>
            </value>
            <value>
                <fullName>Tier III</fullName>
            </value>
            <value>
                <fullName>Tier IV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>