src/objects/Workflow_details__c/fields/Approval_Level_Required__c.field-meta.xml
<CustomField>
    <fullName>Approval_Level_Required__c</fullName>
    <label>Approval Level Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aero Tier 0</fullName>
            </value>
            <value>
                <fullName>Airbus Tier I-1</fullName>
            </value>
            <value>
                <fullName>Airbus Tier II-1</fullName>
            </value>
            <value>
                <fullName>Airbus Tier III-2</fullName>
            </value>
            <value>
                <fullName>Airbus Tier III-5</fullName>
            </value>
            <value>
                <fullName>Airbus Tier IV-1</fullName>
            </value>
            <value>
                <fullName>Airbus Tier IV-3</fullName>
            </value>
            <value>
                <fullName>Airlines Tier I-1</fullName>
            </value>
            <value>
                <fullName>Airlines Tier II-1</fullName>
            </value>
            <value>
                <fullName>Airlines Tier III-1</fullName>
            </value>
            <value>
                <fullName>Airlines Tier III-2</fullName>
            </value>
            <value>
                <fullName>Airlines Tier III-4</fullName>
            </value>
            <value>
                <fullName>Airlines Tier III-5</fullName>
            </value>
            <value>
                <fullName>Airlines Tier IV-2</fullName>
            </value>
            <value>
                <fullName>ATR Tier I-1</fullName>
            </value>
            <value>
                <fullName>ATR Tier II-1</fullName>
            </value>
            <value>
                <fullName>ATR Tier III-1</fullName>
            </value>
            <value>
                <fullName>ATR Tier III-2</fullName>
            </value>
            <value>
                <fullName>ATR Tier IV-1</fullName>
            </value>
            <value>
                <fullName>ATR Tier IV-2</fullName>
            </value>
            <value>
                <fullName>BGA Tier I-1</fullName>
            </value>
            <value>
                <fullName>BGA Tier I-3</fullName>
            </value>
            <value>
                <fullName>BGA Tier II-1</fullName>
            </value>
            <value>
                <fullName>BGA Tier III-1</fullName>
            </value>
            <value>
                <fullName>BGA Tier III-5</fullName>
            </value>
            <value>
                <fullName>BGA Tier IV-1</fullName>
            </value>
            <value>
                <fullName>Boeing Tier I-1</fullName>
            </value>
            <value>
                <fullName>Boeing Tier II-1</fullName>
            </value>
            <value>
                <fullName>Boeing Tier III-2</fullName>
            </value>
            <value>
                <fullName>Boeing Tier III-5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>