src/objects/Workflow_details__c/fields/Atlas_or_P_DR__c.field-meta.xml
<CustomField>
    <fullName>Atlas_or_P_DR__c</fullName>
    <label>SFDC or P&amp;DR Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>