src/objects/Workflow_details__c/fields/ATR__c.field-meta.xml
<CustomField>
    <fullName>ATR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ATR</label>
    <type>Checkbox</type>
</CustomField>