src/objects/Workflow_details__c/fields/ATR_c__c.field-meta.xml
<CustomField>
    <fullName>ATR_c__c</fullName>
    <formula>IF( ATR__c , &apos;ATR&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ATR</label>
    <type>Text</type>
</CustomField>