src/objects/Workflow_details__c/fields/BG_A__c.field-meta.xml
<CustomField>
    <fullName>BG_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BGA</label>
    <type>Checkbox</type>
</CustomField>