src/objects/Workflow_details__c/fields/BG_A_c__c.field-meta.xml
<CustomField>
    <fullName>BG_A_c__c</fullName>
    <formula>IF( BG_A__c , &apos;BGA&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGA</label>
    <type>Text</type>
</CustomField>