src/objects/Workflow_details__c/fields/Boeing__c.field-meta.xml
<CustomField>
    <fullName>Boeing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Boeing</label>
    <type>Checkbox</type>
</CustomField>