src/objects/Workflow_details__c/fields/Boeing_c__c.field-meta.xml
<CustomField>
    <fullName>Boeing_c__c</fullName>
    <formula>IF( Boeing__c , &apos;Boeing&apos;, &apos; &apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Boeing</label>
    <type>Text</type>
</CustomField>