src/objects/Workflow_details__c/fields/Business_unit__c.field-meta.xml
<CustomField>
    <fullName>Business_unit__c</fullName>
    <label>Business unit</label>
    <length>100</length>
    <type>Text</type>
</CustomField>