src/objects/Workflow_details__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>eGreensheet</relationshipLabel>
    <relationshipName>eGreensheet</relationshipName>
    <type>Lookup</type>
</CustomField>