src/objects/Workflow_details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Case.RecordTypeId</field>
            <operation>equals</operation>
            <value>D&amp;S Quotes Orders, D&amp;S Clearing House Proposal</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Case</referenceTo>
    <relationshipName>Workflow_details</relationshipName>
    <type>Lookup</type>
</CustomField>