src/objects/Workflow_details__c/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cost Sharing</fullName>
            </value>
            <value>
                <fullName>CPFF</fullName>
            </value>
            <value>
                <fullName>CPIF</fullName>
            </value>
            <value>
                <fullName>FFP</fullName>
            </value>
            <value>
                <fullName>FFPEA</fullName>
            </value>
            <value>
                <fullName>FPI</fullName>
            </value>
            <value>
                <fullName>Indefinite delivery</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price Re-determination</fullName>
            </value>
            <value>
                <fullName>RFI</fullName>
            </value>
            <value>
                <fullName>ROM</fullName>
            </value>
            <value>
                <fullName>T&amp;M</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
                <default>true</default>
                <label>RFP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>