src/objects/Workflow_details__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Name</label>
    <lookupFilter>
        <active>false</active>
        <errorMessage>Account Name should not contain Various</errorMessage>
        <filterItems>
            <field>Account.Report_Account_Name_upper__c</field>
            <operation>notContain</operation>
            <value>VARIOUS</value>
        </filterItems>
        <infoMessage>Account Name should not contain &quot;Various&quot;</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Workflow_details</relationshipName>
    <type>Lookup</type>
</CustomField>