src/objects/Workflow_details__c/fields/Defence_Space__c.field-meta.xml
<CustomField>
    <fullName>Defence_Space__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defense &amp; Space</label>
    <type>Checkbox</type>
</CustomField>