src/objects/Workflow_details__c/fields/Defence_Space_OE_c__c.field-meta.xml
<CustomField>
    <fullName>Defence_Space_OE_c__c</fullName>
    <formula>IF( Defence_Space_OE__c , &apos;Defense &amp; Space&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Defense &amp; Space</label>
    <type>Text</type>
</CustomField>