src/objects/Workflow_details__c/fields/Documentum__c.field-meta.xml
<CustomField>
    <fullName>Documentum__c</fullName>
    <label>Documentum Link</label>
    <type>Url</type>
</CustomField>