src/objects/Workflow_details__c/fields/EMEAI__c.field-meta.xml
<CustomField>
    <fullName>EMEAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EMEAI</label>
    <type>Checkbox</type>
</CustomField>