src/objects/Workflow_details__c/fields/Exposed_Cost__c.field-meta.xml
<CustomField>
    <fullName>Exposed_Cost__c</fullName>
    <label>Exposed Cost (K$)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>