src/objects/Workflow_details__c/fields/Front_End_Loss_Max_Year__c.field-meta.xml
<CustomField>
    <fullName>Front_End_Loss_Max_Year__c</fullName>
    <label>Front End Loss Max/Year (K$)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>