src/objects/Workflow_details__c/fields/Global__c.field-meta.xml
<CustomField>
    <fullName>Global__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Global</label>
    <type>Checkbox</type>
</CustomField>