src/objects/Workflow_details__c/fields/HIS__c.field-meta.xml
<CustomField>
    <fullName>HIS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HIS</label>
    <type>Checkbox</type>
</CustomField>