src/objects/Workflow_details__c/fields/HIS_c__c.field-meta.xml
<CustomField>
    <fullName>HIS_c__c</fullName>
    <formula>IF( HIS__c , &apos;HIS&apos;, &apos;&apos;)</formula>
    <label>HIS</label>
    <type>Text</type>
</CustomField>