src/objects/Workflow_details__c/fields/HTSI__c.field-meta.xml
<CustomField>
    <fullName>HTSI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTSI</label>
    <type>Checkbox</type>
</CustomField>