src/objects/Workflow_details__c/fields/HTSI_c__c.field-meta.xml
<CustomField>
    <fullName>HTSI_c__c</fullName>
    <formula>IF( HTSI__c, &apos;HTSI&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HTSI</label>
    <type>Text</type>
</CustomField>