src/objects/Workflow_details__c/fields/HTSI_OE__c.field-meta.xml
<CustomField>
    <fullName>HTSI_OE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HTSI</label>
    <type>Checkbox</type>
</CustomField>