src/objects/Workflow_details__c/fields/HTSI_OE_c__c.field-meta.xml
<CustomField>
    <fullName>HTSI_OE_c__c</fullName>
    <formula>IF( HTSI_OE__c , &apos;HTSI&apos;, &apos;&apos;)</formula>
    <label>HTSI</label>
    <type>Text</type>
</CustomField>