src/objects/Workflow_details__c/fields/Middle_East_APU_s_Only__c.field-meta.xml
<CustomField>
    <fullName>Middle_East_APU_s_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Middle East - APU&apos;s Only</label>
    <type>Checkbox</type>
</CustomField>