src/objects/Workflow_details__c/fields/OE__c.field-meta.xml
<CustomField>
    <fullName>OE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OE</label>
    <type>Checkbox</type>
</CustomField>