src/objects/Workflow_details__c/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Renamed the Field Label from &quot;Opportunity Description&quot; to &quot;Opportunity&quot; for SR#422888</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Workflow_details</relationshipName>
    <type>Lookup</type>
</CustomField>