src/objects/Workflow_details__c/fields/Opportunity_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lead_Owner__c</fullName>
    <label>Opportunity Lead/Owner</label>
    <length>100</length>
    <type>Text</type>
</CustomField>