src/objects/Workflow_details__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>Opportunity Name</description>
    <inlineHelpText>Increased the Length of the field to 200 from 100  for the ticket INC000006021739</inlineHelpText>
    <label>Opportunity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>