src/objects/Workflow_details__c/fields/Opportunity_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Proposal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Proposal</label>
    <referenceTo>Opportunity_Proposal__c</referenceTo>
    <relationshipName>Workflow_details</relationshipName>
    <type>Lookup</type>
</CustomField>