src/objects/Workflow_details__c/fields/ownerfullname__c.field-meta.xml
<CustomField>
    <fullName>ownerfullname__c</fullName>
    <formula>Owner:User.FirstName +&apos; &apos;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ownerfullname</label>
    <type>Text</type>
</CustomField>