src/objects/Workflow_details__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Platform__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Platform__c</referenceTo>
    <relationshipLabel>eGreensheet</relationshipLabel>
    <relationshipName>Workflow_details</relationshipName>
    <type>Lookup</type>
</CustomField>