src/objects/Workflow_details__c/fields/Pricing_Proposal_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Proposal_Type__c</fullName>
    <label>Pricing Proposal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TINA</fullName>
                <default>true</default>
                <label>TINA</label>
            </value>
            <value>
                <fullName>Greensheet</fullName>
            </value>
            <value>
                <fullName>Commercial Item</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>