src/objects/Workflow_details__c/fields/Proposal_Title__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Title__c</fullName>
    <label>Proposal Title</label>
    <length>200</length>
    <type>Text</type>
</CustomField>