src/objects/Workflow_details__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Opportunity_Description__c</field>
            <operation>equals</operation>
            <valueField>Quote__c.Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Quote__c</referenceTo>
    <relationshipLabel>eGreensheet</relationshipLabel>
    <relationshipName>eGreensheet</relationshipName>
    <type>Lookup</type>
</CustomField>