src/objects/Workflow_details__c/fields/RACC__c.field-meta.xml
<CustomField>
    <fullName>RACC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Components</label>
    <type>Checkbox</type>
</CustomField>