src/objects/Workflow_details__c/fields/RACC_c__c.field-meta.xml
<CustomField>
    <fullName>RACC_c__c</fullName>
    <formula>IF( RACC__c , &apos;Components&apos;, &apos;&apos;)</formula>
    <label>Components</label>
    <type>Text</type>
</CustomField>