src/objects/Workflow_details__c/fields/Requester_s_Comments__c.field-meta.xml
<CustomField>
    <fullName>Requester_s_Comments__c</fullName>
    <label>Requester’s Comments</label>
    <type>TextArea</type>
</CustomField>