src/objects/Workflow_details__c/fields/Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Sales_Channel__c</fullName>
    <label>Sales Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aerospace</fullName>
            </value>
            <value>
                <fullName>Americas AM</fullName>
            </value>
            <value>
                <fullName>APAC AM</fullName>
            </value>
            <value>
                <fullName>Divest</fullName>
                <isActive>false</isActive>
                <label>Divest</label>
            </value>
            <value>
                <fullName>Electronic Solutions OE</fullName>
            </value>
            <value>
                <fullName>EMEAI AM</fullName>
            </value>
            <value>
                <fullName>Engines &amp; Power Systems OE</fullName>
            </value>
            <value>
                <fullName>Mechanical Systems &amp; Components OE</fullName>
            </value>
            <value>
                <fullName>Services &amp; Connectivity OE</fullName>
            </value>
            <value>
                <fullName>Unmanned Aerial Systems OE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>