src/objects/Workflow_details__c/fields/Suggested_Tier__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Tier__c</fullName>
    <label>Suggested Tier</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>