src/objects/Workflow_details__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>