src/objects/Workflow_details__c/fields/Wokflow_Name__c.field-meta.xml
<CustomField>
    <fullName>Wokflow_Name__c</fullName>
    <label>eGreensheet Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>