src/objects/Workflow_details__c/fields/X5_Year_Revenue_K__c.field-meta.xml
<CustomField>
    <fullName>X5_Year_Revenue_K__c</fullName>
    <label>5 Year Revenue (K$)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>