src/objects/Workflow_details__c/recordTypes/After_approval.recordType-meta.xml
<RecordType>
    <fullName>After_approval</fullName>
    <active>true</active>
    <label>After_approval</label>
</RecordType>