src/objects/Workflow_details__c/recordTypes/Master_wf.recordType-meta.xml
<RecordType>
    <fullName>Master_wf</fullName>
    <active>true</active>
    <label>Master_eGreensheet</label>
</RecordType>