src/objects/Workflow_details__c/recordTypes/Pricing_analyst_after_submit.recordType-meta.xml
<RecordType>
    <fullName>Pricing_analyst_after_submit</fullName>
    <active>true</active>
    <label>Pricing_analyst_after_submit</label>
</RecordType>