src/objects/Workflow_details__c/validationRules/BGA_Customers_Account_name.validationRule-meta.xml
<ValidationRule>
    <fullName>BGA_Customers_Account_name</fullName>
    <active>true</active>
    <description>If the Customer is a BGA, then additional information should be provided in the Customer details information</description>
    <errorConditionFormula>AND( Customer_Name__r.Name = &quot;BGA Customers&quot;, Customer_Description__c = NULL)</errorConditionFormula>
    <errorDisplayField>Customer_Description__c</errorDisplayField>
    <errorMessage>For BGA Customers, please enter the Customer / Account name</errorMessage>
</ValidationRule>