src/objects/Workflow_details__c/validationRules/DS_Case_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DS_Case_Required</fullName>
    <active>true</active>
    <description>Created for INC000005702286</description>
    <errorConditionFormula>AND(  
Defence_Space__c = True, 
ISBLANK( Case__c ), 
left( $Profile.Name, 11) = &apos;eGreensheet&apos;, 
$Profile.Name  &lt;&gt; &apos;eGreensheet Approver&apos;,
$User.Username &lt;&gt; &apos;eGreenApprovalprocess Site Guest User&apos;,  
NOT( Opportunity_Proposal_Create_Date__c &lt; date(2014,1,1) )
)</errorConditionFormula>
    <errorDisplayField>Case__c</errorDisplayField>
    <errorMessage>Case is required for D&amp;S eGreensheet</errorMessage>
</ValidationRule>