src/objects/Workflow_details__c/validationRules/DS_Opportunity_Proposal_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DS_Opportunity_Proposal_Required</fullName>
    <active>false</active>
    <errorConditionFormula>and( 
Defence_Space__c = true, 
ISBLANK(   Opportunity_Proposal__c   )
)</errorConditionFormula>
    <errorDisplayField>Opportunity_Proposal__c</errorDisplayField>
    <errorMessage>Opportunity Proposal is required for D&amp;S eGreensheet</errorMessage>
</ValidationRule>