src/objects/Workflow_details__c/validationRules/DS_Opportunity_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DS_Opportunity_Required</fullName>
    <active>false</active>
    <errorConditionFormula>and( 
Defence_Space__c = true, 
ISBLANK(  Opportunity_Description__c  )
)</errorConditionFormula>
    <errorDisplayField>Opportunity_Description__c</errorDisplayField>
    <errorMessage>Opportunity is required for D&amp;S eGreensheet</errorMessage>
</ValidationRule>