src/objects/Workflow_details__c/validationRules/Negative_Cumm_Cash_Flow.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Cumm_Cash_Flow</fullName>
    <active>true</active>
    <description>Negative_Cumm_Cash_Flow &gt; 0</description>
    <errorConditionFormula>Negative_Cum_Cash_Flow__c &lt; 0</errorConditionFormula>
    <errorMessage>To save the record, Negative_Cum_Cash_Flow needs to be GREATER THAN 0</errorMessage>
</ValidationRule>