src/objects/Workflow_details__c/listViews/Approved.listView-meta.xml
<ListView>
    <fullName>Approved</fullName>
    <columns>NAME</columns>
    <columns>Wokflow_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Approval_Level_in_Progress__c</columns>
    <columns>Approval_Level_Required__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>Approved</label>
</ListView>