src/objects/Workflow_details__c/listViews/ATR_Pending_eGreensheet_Approvals.listView-meta.xml
<ListView>
    <fullName>ATR_Pending_eGreensheet_Approvals</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Customer_Name__c</columns>
    <columns>NAME</columns>
    <columns>Wokflow_Name__c</columns>
    <columns>Documentum__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Opportunity_Lead_Owner__c</columns>
    <columns>Opportunity_Description__c</columns>
    <columns>Opportunity_Number__c</columns>
    <columns>Approval_Level_in_Progress__c</columns>
    <columns>Requester_s_Comments__c</columns>
    <columns>Americas__c</columns>
    <columns>APAC__c</columns>
    <columns>EMEAI__c</columns>
    <columns>Global__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ATR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <label>ATR Pending eGreensheet Approvals</label>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>