src/objects/Workflow_details__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>NAME</columns>
    <columns>Wokflow_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Approval_Level_in_Progress__c</columns>
    <columns>Approval_Level_Required__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>Completed</label>
</ListView>