src/objects/Workflow_details__c/listViews/DS.listView-meta.xml
<ListView>
    <fullName>DS</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Wokflow_Name__c</columns>
    <columns>Opportunity_Description__c</columns>
    <columns>Opportunity_Proposal__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Defence_Space_OE_c__c</columns>
    <columns>Defence_Space__c</columns>
    <columns>Defence_Space_OE__c</columns>
    <columns>Defence_Space_c__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <label>D&amp;S</label>
</ListView>