src/objects/Workflow_details__c/listViews/In_progress.listView-meta.xml
<ListView>
    <fullName>In_progress</fullName>
    <columns>NAME</columns>
    <columns>Wokflow_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Approval_Level_in_Progress__c</columns>
    <columns>Approval_Level_Required__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>In progress</value>
    </filters>
    <label>In Progress</label>
</ListView>