src/objects/Workflow_details__c/listViews/My_tasks.listView-meta.xml
<ListView>
    <fullName>My_tasks</fullName>
    <columns>NAME</columns>
    <columns>Wokflow_Name__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Approval_Level_in_Progress__c</columns>
    <columns>Approval_Level_Required__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Tasks</label>
</ListView>